changed Pure CSS CDN to one that uses HTTPS and removed sidebar height property to stop weird behavior on mobile screen size

--- a/public/main.css
+++ b/public/main.css
@@ -35,5 +35,4 @@ h1 {
   padding-right: 2%;
   border-right: 1rem solid white;
   max-width: 180px;
-  height: 100vh;
 }
